==> bluebandit21/magic-wifi/dev/EtherCard_MSP430FR2355/src/enc28j60.cpp <==
#include "enc28j60.h"
#define ADDR_MASK        0x1F
#define BANK_MASK        0x60
#define SPRD_MASK        0x80
#define EIE              0x1B
#define EIR              0x1C
#define ESTAT            0x1D
#define ECON2            0x1E
#define ECON1            0x1F
#define ERDPT           (0x00|0x00)
#define EWRPT           (0x02|0x00)
#define ETXST           (0x04|0x00)
#define ETXND           (0x06|0x00)
#define ERXST           (0x08|0x00)
#define ERXND           (0x0A|0x00)
#define ERXRDPT         (0x0C|0x00)
#define EDMAST          (0x10|0x00)
#define EDMAND          (0x12|0x00)
#define EDMACS          (0x16|0x00)
#define EHT0             (0x00|0x20)
#define EHT1             (0x01|0x20)
#define EHT2             (0x02|0x20)
#define EHT3             (0x03|0x20)
#define EHT4             (0x04|0x20)
#define EHT5             (0x05|0x20)
#define EHT6             (0x06|0x20)
#define EHT7             (0x07|0x20)
#define EPMM0            (0x08|0x20)
#define EPMM1            (0x09|0x20)
#define EPMM2            (0x0A|0x20)
#define EPMM3            (0x0B|0x20)
#define EPMM4            (0x0C|0x20)
#define EPMM5            (0x0D|0x20)
#define EPMM6            (0x0E|0x20)
#define EPMM7            (0x0F|0x20)
#define EPMCS           (0x10|0x20)
#define EWOLIE           (0x16|0x20)
#define EWOLIR           (0x17|0x20)
#define ERXFCON          (0x18|0x20)
#define EPKTCNT          (0x19|0x20)
#define MACON1           (0x00|0x40|0x80)
#define MACON3           (0x02|0x40|0x80)

void ENC28J60::initSPI () {
    GPIO_setAsOutputPin(select_Port, select_Pin);
    GPIO_setOutputHighOnPin(select_Port, select_Pin);

    /*


    GPIO_setAsOutputPin(MOSI_Port, MOSI_Pin);
    GPIO_setAsOutputPin(SCK_Port, SCK_Pin);
    GPIO_setAsInputPin(MISO_Port, MISO_Pin);

    GPIO_setOutputHighOnPin(MOSI_Port, MOSI_Pin);
    GPIO_setOutputLowOnPin(MOSI_Port, MOSI_Pin);

    GPIO_setOutputLowOnPin(SCK_Port, SCK_Pin);
    */

    //This is largely adapted(stolen) from initSPI on freertos_port branch
    //At some point should be more properly transitioned over
    uint8_t port = GPIO_PORT_P1;
    uint16_t pins =  GPIO_PIN5 + GPIO_PIN6 + GPIO_PIN7;
    GPIO_setAsPeripheralModuleFunctionInputPin(port, pins, GPIO_PRIMARY_MODULE_FUNCTION);

    const uint32_t CS_SMCLK_DESIRED_FREQUENCY_IN_KHZ = 8000;
    uint16_t base = EUSCI_A0_BASE;
    EUSCI_A_SPI_initMasterParam param = {0};
    param.selectClockSource = EUSCI_A_SPI_CLOCKSOURCE_SMCLK;
    param.clockSourceFrequency = CS_getSMCLK(); //SMCLK capable of up to 24MHz. Non-jank around 8MHz.
    param.desiredSpiClock = CS_SMCLK_DESIRED_FREQUENCY_IN_KHZ * 1000;
    param.msbFirst = EUSCI_A_SPI_MSB_FIRST;
    param.clockPhase = EUSCI_A_SPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT;
    param.clockPolarity = EUSCI_A_SPI_CLOCKPOLARITY_INACTIVITY_LOW;
    param.spiMode = EUSCI_A_SPI_3PIN; //TODO implement CS ourselves.. or can use EUSCI_A_SPI_4PIN_UCxSTE_ACTIVE_HIGH
    EUSCI_A_SPI_initMaster(base, &param);

    //Enable SPI Module
    EUSCI_A_SPI_enable(base);
    //Clear receive interrupt flag
    EUSCI_A_SPI_clearInterrupt(base, EUSCI_A_SPI_RECEIVE_INTERRUPT);
    //Enable Receive interrupt
    //EUSCI_A_SPI_enableInterrupt(base, EUSCI_A_SPI_RECEIVE_INTERRUPT); //TODO: FIXME
}

static void enableChip () {
    //cli(); //TODO: This is ... questionable

    GPIO_setOutputLowOnPin(select_Port, select_Pin);
}

static void disableChip () {

    GPIO_setOutputHighOnPin(select_Port, select_Pin);

    //sei(); //TODO: This is ... questionable
}

static void xferSPI (byte data) {

    EUSCI_A_SPI_transmitData(EUSCI_A0_BASE, data);
    while(EUSCI_A_SPI_isBusy(EUSCI_A0_BASE));
}

static byte readOp (byte op, byte address) {
    enableChip();
    xferSPI(op | (address & ADDR_MASK));
    xferSPI(0x00);
    if (address & 0x80)
        xferSPI(0x00);

    byte result = EUSCI_A_SPI_receiveData(EUSCI_A0_BASE);

    disableChip();
    return result;
}

static void readBuf(uint16_t len, byte* data) {
    uint8_t nextbyte;

    enableChip();
    if (len != 0) {
        xferSPI(ENC28J60_READ_BUF_MEM);

        EUSCI_A_SPI_transmitData(EUSCI_A0_BASE, 0x00);

        while (--len) {
            while(EUSCI_A_SPI_isBusy(EUSCI_A0_BASE));
            nextbyte = EUSCI_A_SPI_receiveData(EUSCI_A0_BASE);
            EUSCI_A_SPI_transmitData(EUSCI_A0_BASE, 0x00);

            *data++ = nextbyte;
        }

        while(EUSCI_A_SPI_isBusy(EUSCI_A0_BASE));
        *data++ = EUSCI_A_SPI_receiveData(EUSCI_A0_BASE);
    }
    disableChip();
}

byte ENC28J60::initialize (uint16_t size, const byte* macaddr, uint8_t* send_buf, uint8_t* receive_buf) {
    bufferSize = size;
    send_buffer = send_buf;
    receive_buffer = receive_buf;

    static bool is_initialized = false;

    if(!is_initialized){
        is_initialized = true;
        resetDevice();
        initSPI();
    }

    //GPIO_setAsOutputPin(select_Port, select_Pin);
    disableChip();

    writeOp(ENC28J60_SOFT_RESET, 0, ENC28J60_SOFT_RESET);

    for(volatile int i = 0; i<24000;i++){
        for(volatile int j=0;j<10;j++); //Delay 2 ms ~= 24000 clock cycles
    }

    while (!readOp(ENC28J60_READ_CTRL_REG, ESTAT) & ESTAT_CLKRDY)
        ;

    writeReg(ERXST, RXSTART_INIT);
    writeReg(ERXRDPT, RXSTART_INIT);
    writeReg(ERXND, RXSTOP_INIT);
    writeReg(ETXST, TXSTART_INIT);
    writeReg(ETXND, TXSTOP_INIT);

    // Stretch pulses for LED, LED_A=Link, LED_B=activity
    writePhy(PHLCON, 0x476);

    writeRegByte(ERXFCON, ERXFCON_UCEN|ERXFCON_CRCEN|ERXFCON_PMEN|ERXFCON_BCEN);
    writeReg(EPMM0, 0x303f);
    writeReg(EPMCS, 0xf7f9);
    writeRegByte(MACON1, MACON1_MARXEN);
    writeOp(ENC28J60_BIT_FIELD_SET, MACON3,
            MACON3_PADCFG0|MACON3_TXCRCEN|MACON3_FRMLNEN);
    writeReg(MAIPG, 0x0C12);
    writeRegByte(MABBIPG, 0x12);
    writeReg(MAMXFL, MAX_FRAMELEN);
    writeRegByte(MAADR5, macaddr[0]);
    writeRegByte(MAADR4, macaddr[1]);
    writeRegByte(MAADR3, macaddr[2]);
    writeRegByte(MAADR2, macaddr[3]);
    writeRegByte(MAADR1, macaddr[4]);
    writeRegByte(MAADR0, macaddr[5]);
    writePhy(PHCON2, PHCON2_HDLDIS);
    SetBank(ECON1);
    writeOp(ENC28J60_BIT_FIELD_SET, EIE, EIE_INTIE|EIE_PKTIE);
    writeOp(ENC28J60_BIT_FIELD_SET, ECON1, ECON1_RXEN);

    byte rev = readRegByte(EREVID);
    // microchip forgot to step the number on the silicon when they
    // released the revision B7. 6 is now rev B7. We still have
    // to see what they do when they release B8. At the moment
    // there is no B8 out yet
    if (rev > 5) ++rev;
    return rev;
}
